# Tysightv4

./: .gitignore  Makefile  README.md  debug_test.py  pyproject.toml
.github/workflows/: ci.yaml
app/: Home.py
app/pages/: 1_Kinds.py  2_Instances.py  3_Ask_and_Analyze.py  4_Runs.py  5_Settings.py
domain/catalog/datasets/NIQ POS/: latest.parquet  profile.json
domain/catalog/kinds/NIQ POS/v1/: autofill_report.md  mapping_effective.json  nice_mapping.csv  required_mapping.csv
insight_agent/: instance_manager.py  kind_manager.py  llm_client.py  prompt_builder.py  query_executor.py
tests/insight_agent/: test_instance_manager.py  test_kind_manager.py  test_llm_client.py  test_llm_summary.py  test_query_executor.py
