[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-agent"
version = "0.1.0"
description = "An insight agent project"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
# Include package data if any
